[metadata]
name = autolap
version = 0.0.0
description = Autonomy stack for following lanes and people
author = your_name
author_email = your@email.com
maintainer = your_name
maintainer_email = your@email.com
license = MIT

[options]
packages =
    autolap
    autolap.loop
install_requires =
    setuptools
    rclpy
    # add other dependencies here

[options.entry_points]
console_scripts =
    person_follower = autolap.loop.person_follower:main
    lane_follower = autolap.loop.lane_follower:main
    navigation_controller = autolap.loop.navigation_controller:main

[coverage:run]
branch = True

[coverage:report]
show_missing = True
skip_covered = True

[coverage:html]
directory = coverage_html_report
